--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -11,40 +11,50 @@
 		</div>
 	</div>
 	<div class="row-fluid">
-		<div class="span4 well">
-			<%= render "bids/partials/new", :remote => false %>
-		</div>
 		<div class="span8 well">
-			<div class="span12-fluid">
-				<div class="page-header">
-					<h4><i class="icon-tags" ></i> <%= t(:bids_info) %></h4>
+			<%= form_for [@item, @bid] do |f| %>
+				<div class="row-fluid">
+					<div class="span12-fluid">
+						<ul class="nav nav-tabs">
+							<% @tabs.each do |tab| %>
+								<li>
+									<%= link_to "#tab-#{tab.to_s}", "data-toggle" => "tab" do %>
+										<%= t(tab, :scope => [:views, :bids, :forms, :labels] ) %>
+									<% end # each link %>
+								</li>
+							<% end # each tab %>
+						</ul>
+					</div>
 				</div>
-			</div>
-			<% if @bids.nil? %>
-				<%= t(:no_bid_history) %>
-			<% else # if no bids %>
-				<dl>
-					<% last = @bids.last %>
-					<dt><%= t(:last_bid) %></dt>
-					<% if last.nil? %>
-						<dd><%= t(:nothing_yet) %></dd>
-					<% else %>
-						<dd><%= last.offer %> <%= last.units %></dd>
-						<% location = last.location %>
-					<% end %>
-					
-					
-					<dt><%= t(:target) %></dt>
-					<% unless location.nil? %>
-						<dd><%= location.shipping %> <%= location.city %></dd>
-					<% else %>
-						<dd><%= t(:unknown) %></dd>
-					<% end %>
-					
-					<dt><%= t(:bid_count) %></dt>
-					<dd><%= @bids.count %></dd>
-				</dl>
-			<% end # else bids %>
+				<div class="row-fluid">
+					<div class="span12-fluid">
+						<div class="tab-content">
+							<% @tabs.count.times do |k| %>
+							<% tab = @tabs[k] %>
+								<%= content_tag(:div, :class => "tab-pane " + (tab == @tabs.first ? "active" : ""), :id => "tab-#{tab.to_s}") do %>
+									<%= render "bids/partials/new_form_#{tab.to_s}", :f => f %>
+									<div class="form-actions">
+										<%= link_to "#tab-#{@tabs[k-1].to_s}", "data-toggle" => "tab", :class => "btn" do %>
+											<%= content_tag(:i, "", :class => "icon-arrow-left") %>
+										<% end unless k < 1 %>
+										<%= link_to "#tab-#{@tabs[k+1].to_s}", "data-toggle" => "tab", :class => "btn" do %>
+											<%= content_tag(:i, "", :class => "icon-arrow-right") %>
+										<% end unless @tabs[k+1].nil? %>
+										<div class="pull-right">
+											<%= form_reset_tag( "new_bid" ) unless tab == @tabs.last %>
+											<%= form_action_tag( "new_bid" ) if tab == @tabs.last %>	
+										</div>
+									</div>
+								<% end # div tag %>
+								
+							<% end # each tabs %>
+						</div>
+					</div>
+				</div>
+			<% end # form %>
 		</div>
-	</div>
+		<div class="span4 well">
+		
+		</div>
+	</div>	
 </div>
