passed the integration in the new bids form, now to make it not suck by providing better information on shipping and whatnot

--- a/app/views/bids/partials/_new_form_price.html.erb
+++ b/app/views/bids/partials/_new_form_price.html.erb
@@ -6,14 +6,14 @@
 			
 			<%= money_field_tag(f, :offer, :class => "input-small", :money => "$") %>
 			<%= content_tag(:select, :class => "span2", :name => "bid[units]", :id => "bid_units") do %>
-				<%= options_for_select(['grams','kilograms','pounds','tons','metric tons']) %>
+				<%= options_for_select(mass_units) %>
 			<% end # select %>
 		</div>
 		<hr />
 		<div class="control-group">
 			<%= label_tag :shipping, t(:shipping, :scope => [:views, :locations, :forms, :labels]), :class => "control-label" %>
 			<div class="input-prepend">
-				<%= select_tag( "location[shipping]", options_for_select(['FAS','FOB','CNF','CIF']), :class => "span1 add-on") %>
+				<%= select_tag( "bid[shipping]", options_for_select(buyer_shipping), :class => "span1 add-on") %>
 				<%= location_field_tag( "location[name]", 
 					:class => "input-medium search-query", 
 					:placeholder => t(:name, :scope => [:views, :locations, :forms, :labels]) ) %>
