--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -5,7 +5,7 @@
 			<div class="page-header">
 				<h4>
 					<i class="icon-user"></i> <%= link_to @item.title.capitalize, item_path( @item ) %> &raquo;
-					<i class="icon-tag" ></i> <%= t(:bid) %>
+					<i class="icon-tag" ></i> <%= t(:bid, :scope => [:views, :bids, :forms, :labels]) %>
 				</h4>
 			</div>
 		</div>
