--- a/app/views/bids/partials/_new_form_insurance.html.erb
+++ b/app/views/bids/partials/_new_form_insurance.html.erb
@@ -1,8 +1,8 @@
 <!-- escrow form -->
 <fieldset>
 	<legend><%= t(:insurance, :scope => [:views, :bids, :forms, :new]) %></legend>
-	<%= label_tag "service[insurance]", t(:insurance, :scope => [:views, :bids, :forms, :labels]), :class => "control-label" %>
-	<%= select_tag( "service[insurance]", options_for_select(['a','b','c','d','e']), :include_blank => true ) %>
+	<%= label_tag "service[id]", t(:insurance, :scope => [:views, :bids, :forms, :labels]), :class => "control-label" %>
+	<%= select_tag( "service[id]", options_for_select([[@service.title, @service.id]]), :include_blank => true ) %>
 	<table>
 		<thead>
 			<tr>
