worked in a lot of js and coffee into the bids new view page so that we get a more automated responses with good old fashion ajax and whatnot

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,3 +7,17 @@ img.logoicon {
 	margin-top : -8px;
 }
 
+.btn-square { 
+	width: 75px;
+	height: 75px;
+	margin-left: 10%;
+	margin-right: 5%;
+}
+
+.hidden-junk { 
+	display: none;
+}
+
+invisible { 
+	display: none;
+}
