--- a/app/views/ships/index.js.erb
+++ b/app/views/ships/index.js.erb
@@ -1,2 +1,3 @@
+$("#information-box-ship").html( "" );
 $("#information-box-ship").html( '<%= escape_javascript( render "bids/partials/new_info_ship" )%>' );
 $("#information-box-ship").show( "explode", 500 );
