new bid views complete. we are fucking good to go

--- a/app/views/bids/partials/_new_info_ship.html.erb
+++ b/app/views/bids/partials/_new_info_ship.html.erb
@@ -31,6 +31,10 @@
 				<% end # each field %>
 			</tr>
 		<% end # each port %>
-		
+		<% if @ships.empty? %>
+			<tr>
+				<td><%= t(:unknown) %></td>
+			</tr>
+		<% end %>
 	</tbody>
 </table>
