--- a/app/views/bids/partials/_new_form_insurance.html.erb
+++ b/app/views/bids/partials/_new_form_insurance.html.erb
@@ -1,24 +1,35 @@
 <!-- escrow form -->
 <fieldset>
 	<legend><%= t(:insurance, :scope => [:views, :bids, :forms, :new]) %></legend>
-	<%= label_tag "service[id]", t(:insurance, :scope => [:views, :bids, :forms, :labels]), :class => "control-label" %>
-	<%= select_tag( "service[id]", options_for_select([[@service.title, @service.id]]), :include_blank => true ) %>
 	<table>
 		<thead>
 			<tr>
-				<% [:start, :finish, :containers, :cost].each do |head| %>
+				<% [:title, :description, :company, :price, :include].each do |head| %>
 					<th><%= t(head, :scope => [:views, :services, :forms, :labels]) %></th>
 				<% end # each head %>
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<% [:start, :finish, :containers, :cost].each do |head| %>
-					<%= content_tag(:td, :id => "td-#{head.to_s}") do %>
-						<%= t(:now_loading) %>
-					<% end # td %>
-				<% end # each head %>
-			</tr>
+			<% @services.each do |service| %>
+				<tr>
+					<% [:title, :description, :company, :price, :include].each do |head| %>
+						<%= content_tag(:td, :id => "td-#{head.to_s}") do %>
+							<% case head %>
+								<% when :price %>
+									<%= number_to_currency service[head] %>
+								<% when :description, :title %>
+									<%= link_to( "#", :rel => "tooltip", :title => service[head] ) do %>
+										<%= service[head][0..9] %>
+									<% end # div tag %>
+								<% when :include %>
+									<%= check_box_tag( "service[#{service[:id]}]", :value => service[:id] ) %>
+								<% else %>
+									<%= service[head] %>
+							<% end # case %>
+						<% end # td %>
+					<% end # each head %>
+				</tr>
+			<% end # each service %>
 		</tbody>
 	</table>	
 </fieldset>
