--- a/app/views/bids/partials/_new_form_transportation.html.erb
+++ b/app/views/bids/partials/_new_form_transportation.html.erb
@@ -1,31 +1,17 @@
 <!-- transportation form -->
 <fieldset>
 	<legend><%= t(:transportation, :scope => [:views, :services, :forms, :new]) %></legend>
-	<div id="truck-container">
-		<%= label_tag "truck[id]", t(:trucking, :scope  => [:views, :bids, :forms, :labels]), :class => "control-label" %>
-		<%= check_box_tag("truck[id]", @truck.id, false ) %>
-	</div>
-	<div id="ship-container">
-		<%= label_tag "ship[id]", t(:shipping, :scope => [:views, :bids, :forms, :labels]), :class => "control-label" %>
-		<%= select_tag( "ship[id]", options_for_select([[@ship.company, @ship.id]]), :include_blank => true ) %>
-	</div>
-	<table>
-		<thead>
-			<tr>
-				<% [:start, :finish, :containers, :cost].each do |head| %>
-					<th><%= t(head, :scope => [:views, :services, :forms, :labels]) %></th>
-				<% end # each head %>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<% [:start, :finish, :containers, :cost].each do |head| %>
-					<%= content_tag(:td, :id => "td-#{head.to_s}") do %>
-						<%= t(:now_loading) %>
-					<% end # td %>
-				<% end # each head %>
-			</tr>
-		</tbody>
-	</table>	
+	<% ['ship','truck'].each do |trans| %>
+		<%= content_tag :div, :id => "#{trans}-container" do %>
+			<%= label_tag "ship[id]", t("#{trans}ping".to_sym, :scope => [:views, :bids, :forms, :labels]), :class => "control-label" %>
+			<% options_for_fags = trans == 'ship' ? [@ship.company, @ship.id] : [@truck.company, @truck.id] %>
+			<%= select_tag( "#{trans}[id]", options_for_select([options_for_fags]), 
+				:include_blank => true, :id => "transportation_select_#{trans}_id" ) %>
+		<% end # div tag %>
+	<% end # each trans %>
+	<%= stateful_button_tag( "request_best_routes_button", :class => "btn btn-square", :style => "display : none;") do %>
+		<%= image_tag("http://i299.photobucket.com/albums/mm281/foxnewsnetwork/earthicon.png") %>
+	<% end # button %>
+	<div id='recommendation-table'></div>	
 	
 </fieldset>
