--- a/app/views/trucks/index.js.erb
+++ b/app/views/trucks/index.js.erb
@@ -1,3 +1,6 @@
 $("#information-box-truck").html( "" );
 $("#information-box-truck").html( '<%= escape_javascript( render "bids/partials/new_info_truck" )%>' );
 $("#information-box-truck").show( "explode", 500 );
+
+$("#transportation_select_truck_id").html( "" );
+$("#transportation_select_truck_id").html( '<%= escape_javascript( options_for_select(@trucks.map { |x| [x.company, x.id] } ) ) %>' );
