--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -12,6 +12,11 @@
 			<% end %>
 		</div>
 	</div>
+	<div class="row-fluid">
+		<div class="span12-fluid">
+			<%= will_paginate @raw_items %>
+		</div>
+	</div>
 	<div class="row-fluid" id="page-index-container-nigger">
 		<%= render "items/partials/index" %> 
 	</div>
